# flower-basic

./: .editorconfig  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  AI_DATASET_RULES.md  BASELINE_IMPLEMENTATION_SUCCESS.md  BASELINE_MODEL_GUIDE.md  CHANGELOG.md  Context.md  Dockerfile  EXECUTION_GUIDE.md  GITHUB_ACTIONS_SUMMARY.md  IMPLEMENTATION_REPORT.md  MODERNIZATION_REPORT.md  MULTI_DATASET_DEMO_SUMMARY.md  Makefile  PHASE1_COMPLETION_REPORT.md  README.md  RULES.md  SWELL_BASELINE_RESULTS.md  WESAD_BASELINE_RESULTS.md  analyze_swell_suspicious.py  baseline_model.py  broker_fog.py  client.py  compare_models.py  debug.py  debug_swell_real.py  docker-compose.yml  download_ecg5000.py  fog_flower_client.py  format_code.py  migration_report.txt  model.py  mosquitto.conf  multi_dataset_demo_report.json  pyproject.toml  pytest.ini  quick_comparison.py  (+20 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  SECURITY.md  dependabot.yml  pull_request_template.md  stale.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  question.yml
.github/workflows/: README.md  ci.yml  codeql.yml  nightly.yml  pr-review.yml  publish.yml  release-notes.yml  release.yml
comparativa_completa/: comparison_report.json  comparison_report.txt
quick_baseline_test/: baseline_metrics.json  baseline_model.pth
quick_comparison_results/: comparison_report.json  comparison_report.txt
scripts/: check_deprecated.py  check_deprecated_simple.py  create_real_samples.py  dataset_rules.py  demo_multidataset_fl.py  demo_simple_multidataset.py  diagnose_wesad.py  evaluate_multimodal_baseline.py  evaluate_swell_baseline.py  evaluate_wesad_baseline.py  inspect_wesad_labels.py  migrate_ecg5000.py  run_subject_cv.py
src/flower_basic/: __init__.py  __main__.py  baseline_model.py  broker_fog.py  client.py  compare_models.py  evaluation.py  fog_flower_client.py  model.py  server.py  utils.py
src/flower_basic/datasets/: __init__.py  ecg5000.py  multimodal.py  samples.py  swell.py  wesad.py
subject_cv_results/: subject_cv_folds.csv  subject_cv_summary.csv  subject_cv_summary.json
tests/: __init__.py  conftest.py  test_baseline_comparison.py  test_datasets.py  test_integration.py  test_model.py  test_mqtt_components.py  test_real_datasets.py  test_server.py  test_utils.py
